# opencv_example

./: README.md
Lession 1/Ticket_Manual/: BUILD  ticket.cpp
Lesson 1/Ticket/: BUILD  CMakeLists.txt  Scan_Ticket.cpp
Lesson 1/Ticket_Manual/: CMakeLists.txt
Lesson 2/: CMakeLists.txt  skin_detect.cpp  test.bak
Lesson 3/: BUILD  BUILD~  CMakeLists.txt  color_cluster.cpp
Lesson 4/Find_Will/: BUILD  CMakeLists.txt  FindWilly.cpp
Lesson 4/match/: BUILD  CMakeLists.txt  ReadMe  registration.cpp
Lesson 4/pick/: BUILD  CMakeLists.txt  mymouse_bak.cpp
Lesson 5/: README.md
Lesson 5/TrainCar/: sample_process  sample_process_neg
Lesson 5/TrainCar/car_detection/: CMakeLists.txt  objectDetection.cpp
Lesson 5/TrainEye/: process.py  process_image_ID  process_image_resize  sample_process_neg
Lesson 5/TrainEye/VerifyEyeInfo/: CMakeLists.txt  process.cpp
Lesson 5/TrainEye/detection/: CMakeLists.txt  objectDetection.cpp
Lesson 5/TrainEye/resize/: CMakeLists.txt  process.cpp
Lesson 6/: BUILD  CMakeLists.txt  camshiftdemo.cpp
Lesson 7/: BUILD
Lesson 7/multi_view_sfm/: Main.cpp  MatchingImageList.cpp  MatchingImageList.h  MultiCamera.cpp  MultiCamera.h  Triangle.cpp  Triangle.h
Lesson 7/multi_view_sfm_ba/: BundleAdjuster.cpp  BundleAdjuster.h  CMakeLists.txt  MatchingImageList.cpp  MatchingImageList.h  MultiCamera.cpp  MultiCamera.h  Triangle.h  common.h
Lesson 7/two_view_sfm/: CMakeLists.txt  main.cpp  triangulation.cpp  triangulation.h
