cmake_minimum_required(VERSION 2.8)
project(ColorCluster)
find_package(OpenCV REQUIRED)
SET(CMAKE_C_COMPILER g++)
SET(CMAKE_BUILD_TYPE "Debug") 
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
add_compile_options(-std=c++11)

set(INC_LOCAL_DIR  /usr/local/include/ ${ColorCluster_SOURCE_DIR})  
set(LINK_DIR /usr/local/lib /usr/lib/x86_64-linux-gnu)
AUX_SOURCE_DIRECTORY(${ColorCluster_SOURCE_DIR} SOURCE_FILES)
include_directories(${INC_LOCAL_DIR}) 
link_directories(${LINK_DIR})
add_executable( ColorCluster ${SOURCE_FILES})
target_link_libraries( ColorCluster ${OpenCV_LIBS})
