project(verify_image)  
SET(CMAKE_BUILD_TYPE "Debug") 
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
find_package(OpenCV REQUIRED)  
add_executable(verify_image process.cpp)  
target_link_libraries(verify_image ${OpenCV_LIBS})  
cmake_minimum_required(VERSION 2.8)
